# messenger

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.958aba1  README.md  meson.build
cmake-modules/: CMakeLists.txt
cmake-modules/.bzr/branch/: branch.conf  last-revision
cmake-modules/.bzr/checkout/: dirstate
cmake-modules/.bzr/repository/: pack-names
cmake-modules/debian/: changelog  control  copyright  rules
data/: com.github.aprilis.messenger.appdata.xml.in  com.github.aprilis.messenger.desktop  com.github.aprilis.messenger.gschema.xml  meson.build  org.messenger.app.desktop
debian/: changelog  control  copyright  rules
meson/: post_install.py
plank/: ChangeLog  Makefile.in  configure
plank/data/: Makefile.in  plank.desktop.in
plank/data/apport/: Makefile.in  plank-crashdb.conf
plank/data/icons/: Makefile.in
plank/data/themes/: Makefile.in
plank/data/ui/: preferences.ui
plank/debian/: README.source  changelog  control  copyright  libplank-common.install  libplank-dev.install  libplank-doc.install  plank.install  rules  watch
plank/debian/patches/: 01_pantheon-support.patch  02_drop_iconzoom.patch  series
plank/docklets/: Makefile.in
plank/docklets/CPUMonitor/: Makefile.in
plank/docklets/Clippy/: Makefile.in
plank/docklets/Clock/: Makefile.in
plank/docklets/Desktop/: Makefile.in
plank/docklets/Trash/: Makefile.in
plank/docs/: Makefile.in
plank/docs/vala-doc/plank/: Plank.AbstractMain.html  Plank.ApplicationDockItem.html  Plank.ApplicationDockItemProvider.html  Plank.CompositedWindow.html  Plank.DBusClient.html  Plank.DBusManager.html  Plank.DefaultApplicationDockItemProvider.html  Plank.DockContainer.html  Plank.DockController.html  Plank.DockElement.create_menu_item.html  Plank.DockElement.create_menu_item_with_pixbuf.html  Plank.DockElement.html  Plank.DockItem.html  Plank.DockItemPreferences.html  Plank.DockItemProvider.html  Plank.DockPreferences.html  Plank.DockRenderer.html  Plank.DockTheme.html  Plank.DockWindow.html  Plank.Docklet.html  Plank.DockletItem.html  Plank.DockletManager.html  Plank.DragManager.html  Plank.DrawingService.html  Plank.Factory.html  Plank.FileDockItem.html  Plank.HideManager.html  Plank.HoverWindow.html  Plank.ItemFactory.html  Plank.Logger.html  Plank.Paths.html  Plank.PlaceholderDockItem.html  Plank.PlankDockItem.html  Plank.PoofWindow.html  Plank.PositionManager.html  Plank.Preferences.html  Plank.PreferencesWindow.html  Plank.Renderer.html  Plank.Serializable.html  Plank.Settings.html  (+10 more)
plank/examples/: Makefile.in
plank/lib/: DBusManager.vala  Makefile.in  PositionManager.vala
plank/lib/DBus/: Client.vala  Interfaces.vala
plank/lib/Factories/: AbstractMain.vala
plank/lib/Widgets/: PreferencesWindow.vala
plank/src/: Makefile.in
plank/tests/: Makefile.in
plank/vapi/: Makefile.in
po/: POTFILES  com.github.aprilis.messenger.pot  fr.po  nl.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
schemas/: com.github.aprilis.messenger.gschema.xml
script/: com.github.aprilis.messenger-open-chat  files  messenger-open-chat  uninstall-plank.sh  vapigen.sh
script/tmp-introspectIlZpPR/: Fb-1.0
script/tmp-introspectoZ7rRi/: Fb-1.0.c
src/: App.vala  ApplicationPopOver.vala  Contact.vala  ConvData.vala  Conversation.vala  DBus.vala  Data.vala  FadeOutBin.vala  FocusGrabber.vala  GroupCreator.vala  GroupThread.vala  HeaderBar.vala  Loading.vala  LoadingScreen.vala  LoginDialog.vala  Main.vala  MainWindow.vala  MainWindowManager.vala  PasswordScreen.vala  PopOver.vala  Screen.vala  Settings.vala  SettingsWindow.vala  Shortcut.vala  SignIn.vala  SignUp.vala  SingleThread.vala  Thread.vala  ThreadsScreen.vala  ThreadsViewer.vala  Utils.vala  Version.vala  Welcome.vala  meson.build
src/api/: CMakeLists.txt  api.c  api.h  http.c  http.h  main.c  marshal.h  mqtt.c  mqtt.h
src/api/metadata/: Fb.metadata
subprojects/libapi/: meson.build
subprojects/libapi/api/: api.c  glibcompat.h  http.c  internal.h  json.c  marshal.c  mqtt.c  mqtt.h  thrift.c  thrift.h  util.c  util.h
vapi/: Fb.vapi  plank-internal.vapi  plank.vapi
vapi/doc/: index.html
vapi/doc/doc/: Fb.API_AGENT.html  Fb.API_AHOST.html  Fb.API_BHOST.html  Fb.API_CONTACTS_COUNT.html  Fb.API_GHOST.html  Fb.API_KEY.html  Fb.API_QUERY_CONTACT.html  Fb.API_QUERY_CONTACTS.html  Fb.API_QUERY_CONTACTS_AFTER.html  Fb.API_QUERY_SEQ_ID.html  Fb.API_QUERY_STICKER.html  Fb.API_QUERY_THREAD.html  Fb.API_QUERY_THREADS.html  Fb.API_QUERY_XMA.html  Fb.API_SECRET.html  Fb.API_THREADS_COUNT.html  Fb.API_WHOST.html  Fb.Api.Api.html  Fb.Api.auth.html  Fb.Api.auth_func.html  Fb.Api.cid.html  Fb.Api.connect.html  Fb.Api.connect_func.html  Fb.Api.contact.html  Fb.Api.contact_func.html  Fb.Api.contacts.html  Fb.Api.contacts_func.html  Fb.Api.did.html  Fb.Api.disconnect.html  Fb.Api.disconnect_func.html  Fb.Api.error.html  Fb.Api.error_emit.html  Fb.Api.error_quark.html  Fb.Api.events.html  Fb.Api.html  Fb.Api.is_invisible.html  Fb.Api.message.html  Fb.Api.messages.html  Fb.Api.mid.html  Fb.Api.presences.html  (+284 more)
