sources = files(
    'App.vala',
    'Data.vala',
    'Contact.vala',
    'Thread.vala',
    'SingleThread.vala',
    'GroupThread.vala',
    'ThreadsViewer.vala',
    'Conversation.vala',
    'FocusGrabber.vala',
    'ConvData.vala',
    'ApplicationPopOver.vala',
    'PopOver.vala',
    'Main.vala',
    'HeaderBar.vala',
    'MainWindowManager.vala',
    'Loading.vala',
    'Screen.vala',
    'SignIn.vala',
    'SignUp.vala',
    'Welcome.vala',
    'ThreadsScreen.vala',
    'PasswordScreen.vala',
    'LoadingScreen.vala',
    'Utils.vala',
    'LoginDialog.vala',
    'Version.vala',
    'GroupCreator.vala',
    'FadeOutBin.vala',
    'Shortcut.vala',
    'Settings.vala',
    'SettingsWindow.vala',
    'DBus.vala'
)